# napari-afmslicer

./: .copier-answers.yml  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pylintrc.toml  README.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
.github/workflows/: test_and_deploy.yml
src/napari_afmslicer/: __init__.py  _widget.py  afmslicer_filter_widget.py  afmslicer_slicer_widget.py  napari.yaml  view_3d_widget.py
tests/: __init__.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
